<resources>
    <string name="app_name">EGKAIRA</string>
    <string name="app_version_text">Version 1.0.0</string>
    <string name="about_app_text">This is chat App.\n\nFeatures :\n1.Important message Alert.\n2. Schedule a message</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="important_message_channel">important_message_channel</string>

    <string name="default_web_client_id">297687635528-atgvblp5i9mit4u4rnijfdu2d8uk3a3j.apps.googleusercontent.com</string>

    <string name="welcome_msg">Welcome to EGKAIRA</string>
    <string name="sign_in_msg">Sign in to continue chatting with friends &amp; family</string>
    <string name="sign_in_btn_text">Sign in with Google</string>


</resources>