<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <!-- Authentication Details -->
    <TextView
        android:id="@+id/tvAuthDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_msg"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_below="@id/tvAuthDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="App Logo"
        android:adjustViewBounds="true" />

    <!-- Google Sign-In Button -->
    <LinearLayout
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/google_button_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Google Logo -->
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/google_icon"
            android:contentDescription="Google Logo"
            android:layout_marginEnd="10dp" />

        <!-- Sign-In Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_btn_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>