<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_card"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/chat_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

<!--        <RelativeLayout-->
<!--            android:id="@+id/bt_close"-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:background="@drawable/dialog_circle_bg"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:background="@drawable/ic_close"-->
<!--                android:backgroundTint="@color/black" />-->

<!--        </RelativeLayout>-->

        <LinearLayout
            android:id="@+id/center_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
              android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerCrop"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/app_version_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grayText" />

            <TextView
                android:id="@+id/dialogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="@string/about_app_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grayText2" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>